@@ -1,6 +1,10 @@
 
 ####   Don't forget to change the version number in configure.ac!   ####
 
+24 Nov 2005 Accept "zARCH" as synonym for "ESAME" archmode - Fish
+24 Nov 2005 hbyteswp.h: MSVC workaround for PR# emul/4 - Fish
+24 Nov 2005 Fix some very minor glitches in new panel displays - Fish
+24 Nov 2005 Report #of processors in hostinfo struct for non-MSVC - Fish
 23 Nov 2005 Fix "LNK4099 libcmt.pdb not found" in MSVC static build - Roger Bowler
 22 Nov 2005 dyninst module now built in MSVC DLL-MOD version - Ivan Warren
 22 Nov 2005 Crypto module now built in MSVC DLL-MOD version - Ivan Warren
